# drasil

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md
drasil-dvltath/: Cargo.toml  Dockerfile
drasil-dvltath/src/: error.rs
drasil-dvltath/src/vault/: auth.rs  mod.rs
drasil-gungnir/: Cargo.toml  README.md
drasil-gungnir/migrations/00000001_init/: down.sql  up.sql
drasil-gungnir/migrations/2022-04-07-164140_airdrop_table_1/: down.sql
drasil-gungnir/src/: error.rs  lib.rs  schema.rs
drasil-gungnir/src/minting/: api.rs  models.rs
drasil-gungnir/src/rewards/: api.rs  mod.rs
drasil-hugin/: Cargo.toml
drasil-hugin/migrations/000001_init/: up.sql
drasil-hugin/migrations/2022-03-11-010342_add_tables_0/: down.sql
drasil-hugin/migrations/2022-04-27-120700_payouts/: up.sql
drasil-hugin/src/: client.rs  error.rs  lib.rs  schema.rs
drasil-hugin/src/admin/: mod.rs
drasil-hugin/src/authentication/: auth.rs  mod.rs
drasil-hugin/src/database/drasildb/: api.rs  error.rs  mod.rs
drasil-hugin/src/datamodel/: mod.rs  models.rs
drasil-hugin/src/encryption/: mod.rs
drasil-hugin/src/protocol/: connection.rs  frame.rs  mod.rs  parse.rs  shutdown.rs  worldmobile.rs
drasil-hugin/src/protocol/cmd/: buildcontract.rs  buildmultisig.rs  buildtx.rs  clientapi.rs  discount.rs  error.rs  finalizecontract.rs  finalizemultisig.rs  finalizestdtx.rs  mod.rs  unknown.rs  verifyuser.rs
drasil-hugin/src/protocol/multisig/: cpo_handler.rs  mcollection_handler.rs  moneshot_handler.rs  reward_handler.rs  testrwd_handler.rs
drasil-hugin/src/protocol/smartcontract/: mod.rs  nft_marketplace.rs
drasil-hugin/src/protocol/stdtx/: delegation_handler.rs  deligation_handler.rs  deregistration_handler.rs  (+3 more)
drasil-mimir/: Cargo.toml  README.md
drasil-mimir/src/: api.rs  error.rs  lib.rs  models.rs  schema.rs
drasil-murin/: Cargo.toml  README.md
drasil-murin/src/: error.rs  lib.rs
drasil-murin/src/cardano/: hfn.rs  mod.rs  models.rs  supporting_functions.rs
drasil-murin/src/chelper/: cproparams.rs  hfn.rs
drasil-murin/src/cip30/: wallet.rs
drasil-murin/src/txbuilder/: finalize.rs  mod.rs  worldmobile.rs
drasil-murin/src/txbuilders/: mod.rs
drasil-murin/src/utxomngr/: mod.rs  txmind.rs  usedutxos.rs
drasil-sleipnir/: Cargo.toml
drasil-sleipnir/src/: discounts.rs  error.rs  lib.rs
drasil-sleipnir/src/administration/: mod.rs
drasil-sleipnir/src/airdrops/: ad_params.rs  mod.rs  nftairdrop.rs
drasil-sleipnir/src/apiauth/: mod.rs
drasil-sleipnir/src/jobs/: mod.rs
drasil-sleipnir/src/minting/: api.rs  mod.rs
drasil-sleipnir/src/rewards/: mod.rs  models.rs
drasil-sleipnir/src/user/: mod.rs
drasil-sleipnir/src/whitelist/: mod.rs
dvltath/: Cargo.toml  Dockerfile  Makefile
dvltath/src/vault/: auth.rs
freki/: Cargo.toml  Dockerfile  Makefile  Makefile_maestro  README.md  freki_cronjob
freki/src/: main.rs  models.rs  rwd_handling.rs  stake.rs  whitelists.rs
frigg/: Cargo.toml  Dockerfile  Makefile  README.md
frigg/src/: auth.rs  error.rs  main.rs
frigg/src/email_verify/: api.rs  mod.rs
frigg/src/handler/: adm.rs  dapi.rs  mod.rs  rwd.rs
geri/: Cargo.toml  Dockerfile  Dockerfile_maestro  Makefile  Makefile_maestro  README.md
geri/src/: main.rs  model.rs
hugin/: Cargo.toml  LICENSE.md  README.md
hugin/migrations/2022-03-11-010342_add_tables_0/: up.sql
hugin/src/: client.rs  lib.rs  schema.rs
hugin/src/admin/: mod.rs
hugin/src/database/: mod.rs
hugin/src/datamodel/: hephadata.rs  mod.rs  models.rs
hugin/src/encryption/: mod.rs
hugin/src/protocol/: connection.rs  frame.rs  mod.rs  parse.rs  shutdown.rs
jobs/freki/: Cargo.toml  Dockerfile  Dockerfile_maestro  Makefile  README.md
jobs/freki/src/: main.rs  models.rs  rwd_handling.rs  stake.rs  whitelists.rs
jobs/utxopti/: Cargo.toml  Dockerfile  Makefile
jobs/utxopti/src/: error.rs  lib.rs
libs/cdp/: Cargo.toml
libs/cdp/src/: lib.rs  models.rs
libs/csl_common/: Cargo.toml
libs/csl_common/src/: error.rs  lib.rs
libs/gungnir/: Cargo.toml  README.md
libs/gungnir/src/: error.rs  lib.rs  schema.rs
libs/mimir/: Cargo.toml
libs/mimir/src/: api.rs  error.rs  models.rs  schema.rs
libs/murin/: Cargo.toml
libs/murin/src/: error.rs  lib.rs
mimir/: Cargo.toml  README.md
mimir/src/: api.rs  error.rs  lib.rs  models.rs  schema.rs
murin/: Cargo.toml  README.md
murin/src/: cost.rs  error.rs  lib.rs
murin/src/chelper/: cproparams.rs  hfn.rs  htypes.rs  mod.rs
murin/src/cip30/: mod.rs  wallet.rs
murin/src/txbuilders/: finalize.rs  mod.rs
murin/src/utxomngr/: mod.rs  txmind.rs  usedutxos.rs
odin/: Cargo.toml  Dockerfile  Dockerfile_maestro  Makefile  Makefile_maestro  README.md
odin/src/: main.rs
pauther/: Cargo.toml
pauther/src/: error.rs
services/frigg/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
services/frigg/src/: auth.rs  error.rs  main.rs
services/heimdallr/: Cargo.toml  Dockerfile  Makefile  README.md
services/heimdallr-v2/: Cargo.toml  README.md
services/heimdallr-v2/src/: bootstrap.rs  error.rs  extractor.rs  lib.rs  main.rs  routes.rs  settings.rs  state.rs  tracer.rs
services/heimdallr/.cargo/: config
services/heimdallr/src/: clientapi.rs  connector.rs  error.rs  lib.rs  main.rs
sleipnir/: Cargo.toml  README.md
sleipnir/src/: error.rs  lib.rs
sleipnir/src/administration/: mod.rs
sleipnir/src/airdrops/: ad_params.rs  ftairdrop.rs  mod.rs  nftairdrop.rs
sleipnir/src/apiauth/: mod.rs
sleipnir/src/contracts/: mod.rs
sleipnir/src/minting/: mod.rs
sleipnir/src/rewards/: mod.rs  models.rs
sleipnir/src/user/: mod.rs
sleipnir/src/whitelist/: mod.rs
utxopti/: Cargo.toml  Dockerfile  Makefile
utxopti/.cargo/gungnir/: Cargo.toml
utxopti/.cargo/mimir/: Cargo.toml
utxopti/src/: error.rs  lib.rs  main.rs
vidar/: Cargo.toml  Dockerfile  Dockerfile_maestro  Makefile  Makefile_maestro  README.md
vidar/src/: main.rs
worldmobile/: Cargo.toml
worldmobile/src/: config.rs  error.rs  lib.rs  models.rs  registration.rs
worldmobile/src/registration/: admin.rs  register.rs  unregister.rs
(+502 files in other folders)
