[workspace]
members = [
    "jobs/freki",
    "services/frigg",
    "worker/geri",
    "services/heimdallr",
    "libs/gungnir",
    "libs/hugin",
    "libs/mimir",
    "libs/murin",
    "services/odin",
    "libs/sleipnir",
    "services/vidar",
    "jobs/utxopti",
    "services/wsauth",
    "libs/dvltath",
    "services/loki",
    "worker/work_loki",
    "worker/jobs",
]
