[workspace]
members = [
    "drasil-gungnir",
    "drasil-hugin",
    "drasil-mimir",
    "drasil-murin",
    "drasil-sleipnir",
    "drasil-dvltath",
    "jobs/freki",
    "jobs/utxopti",
    "services/wsauth",
    "services/odin",
    "services/vidar",
    "services/heimdallr",
    "services/heimdallr-v2",
    "services/frigg",
    "services/loki",
    "worker/geri",
    "worker/work_loki",
    "worker/jobs",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
log = "0.4"
thiserror = "1"
hex = "0.4"
rand = "0.8.5"
structopt = "0.3.26"
chrono = "0.4.19"
bigdecimal = { version = "0.4.0", features = ["serde"] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
async-recursion = "1.0.0"
bytes = "1"
itertools = "0.10.3"
sha2 = "0.10.2"
argon2 = "0.4.1"
diesel-derive-enum = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
zeroize = "1.4"
warp = { version = "0.3", features = ["tls"] }
vaultrs = { git = "https://github.com/Sbcdn/vaultrs.git", branch = "master" } #"0.6.2"
diesel = { version = "2.1.4", features = ["postgres", "chrono","postgres_backend"] }
jsonwebtoken = { version = "8.1.0", features = ["use_pem"] }