[package]
name = "drasil-gungnir"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Reward Library"
repository = "https://github.com/Sbcdn/drasil.git"
documentation = "https://docs.drasil.io"
license = "LICENSE_GPL.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
tokio = { workspace = true }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
async-recursion = { workspace = true }
diesel-derive-enum = { workspace = true }
diesel-dynamic-schema = "0.2.0"
bigdecimal = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
pretty_env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true } 
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
structopt = { workspace = true, optional = true }

drasil-mimir = { path = "../drasil-mimir", version = "0.1.0", optional = true }

[dependencies.diesel]
workspace = true 
features = [
  "numeric",
  "64-column-tables",
  "r2d2",
  "serde_json",
] 


[features]
mimir_bin = ["drasil-mimir", "structopt"]


[[bin]]
name = "create_token_whitelisting"
required-features = ["mimir_bin"]
