[package]
name = "dvltath"
version = "0.1.0"
edition = "2021"
description = "Hashicorp Vault Authorizer Sidecar for Drasil"
repository = "https://github.com/Sbcdn/dvltath.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
tokio = { version = "1", features = ["full"] }

tokio-stream = { version = "0.1.6", features = ["net"] }
warp = { version = "0.3", features = ["tls"] }
pretty_env_logger = "0.4.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.32"
hex = "0.4"
vaultrs = { git = "https://github.com/Sbcdn/vaultrs.git", branch = "master" } #"0.6.2"
lazy_static = "1.4.0"
http = "0.2.6"
futures = "0.3.21"
hyperlocal = "0.8"
hyper = "0.14.20"
