#################################################################################
# See LICENSE.md for full license information.                                  #
# Software: Drasil Blockchain Application Framework                             #
# License: Drasil Source Available License v1.0                                 #
# Licensors: Torben Poguntke (torben@drasil.io) & Zak Bassey (zak@drasil.io)    #
#################################################################################
[package]
name = "freki"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Reward Calculator"
repository = "https://github.com/Sbcdn/freki.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.79", features = ["preserve_order"]}
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.31"
dotenv = "0.15.0"
structopt = "0.3.26"
chrono = "0.4.19"
bigdecimal = { version = "0.1.2", features = ["serde"] } # needs to be 0.1.2 otherwise not working -> dependency diesel

murin = { path = "../murin", version="0.1.0" }
mimir = { path = "../mimir", version="0.1.0" }
gungnir = { path = "../gungnir", version="0.1.0" }
hugin = { path = "../hugin", version="0.1.0" }

# Single repositories
#murin = { git = "ssh://git@github.com/sbcdn/murin.git", branch="main" }
#mimir = { git = "ssh://git@github.com/sbcdn/mimir.git", branch="main" }
#gungnir = { git = "ssh://git@github.com/sbcdn/gungnir.git", branch="main" }
#hugin = { git = "ssh://git@github.com/sbcdn/hugin.git", branch="main" }
