#################################################################################
# See LICENSE.md for full license information.                                  #
# Software: Drasil Blockchain Application Framework                             #
# License: Drasil Source Available License v1.0                                 #
# Licensors: Torben Poguntke (torben@drasil.io) & Zak Bassey (zak@drasil.io)    #
#################################################################################

[package]
name = "geri"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Redis Blockchain Transaction Librarian"
repository = "https://github.com/Sbcdn/geri.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
#tokio = { version = "1", features = ["full"] }
redis = { version ="0.21.5",  features = ["cluster"] } # "tokio-comp",
#redis_cluster_async = "0.7.0"
serde_json = { version = "1.0.79", features = ["preserve_order"]}
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"

pretty_env_logger = "0.4.0"
log = "0.4"
murin = { path = "../murin", version="0.1.0" }
#murin = { git = "ssh://git@github.com/sbcdn/murin.git", branch="main" }