#################################################################################
# See LICENSE.md for full license information.                                  #
# Software: Drasil Blockchain Application Framework                             #
# License: Drasil Source Available License v1.0                                 #
# Licensors: Torben Poguntke (torben@drasil.io) & Zak Bassey (zak@drasil.io)    #
#################################################################################

[package]
name = "hugin"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Drasil System Library"
repository = "https://github.com/Sbcdn/hugin.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-recursion = "1.0.0"
bytes = "1"
atoi = "1.0.0"
pretty_env_logger = "0.4.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3.3"
serde_bytes = "0.11.5"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
hex = "0.4"
rand = "0.8.5"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
chrono = "0.4.19"
dotenv = "0.15.0"
structopt = "0.3.26"
argon2 = "0.4.1"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
zeroize = "1.4"
rargon2 = { package = "rust-argon2", version = "1.0" }
rpassword = "5.0.1"
vaultrs = { git = "https://github.com/Sbcdn/vaultrs.git", branch = "master" } #"0.6.2"
sha2 = "0.10.2"
#google-authenticator = "0.3.0"

murin = { path = "../murin", version = "0.1.0" }
mimir = { path = "../mimir", version = "0.1.0" }
gungnir = { path = "../gungnir", version = "0.1.0" }

#murin = { git = "ssh://git@github.com/maestro-org/murin.git", branch="main" }
#mimir = { git = "ssh://git@github.com/maestro-org/mimir.git", branch="main" }
#gungnir = { git = "ssh://git@github.com/maestro-org/gungnir.git", branch="main" }
