#################################################################################
# See LICENSE.md for full license information.                                  #
# Software: Drasil Blockchain Application Framework                             #
# License: Drasil Source Available License v1.0                                 #
# Licensors: Torben Poguntke (torben@drasil.io) & Zak Bassey (zak@drasil.io)    #
#################################################################################

[package]
name = "murin"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Cardano Blockchain Library"
repository = "https://github.com/Sbcdn/murin.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-recursion = "1.0.0"
bytes = "1"
chrono = "0.4.19"
cardano-serialization-lib = "10.1.0"
pretty_env_logger = "0.4.0"
log = "0.4"
serde_json = { version = "1.0.79", features = ["preserve_order"]}
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
ed25519-bip32 = "0.4.1"
encoding_rs = "0.8.30"
#emurgo-message-signing = { path= "utils/message-signing/rust" }
num = "0.4.0"
tempdir = "0.3.7"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
redis = { version ="0.21.5",  features = ["tokio-comp","cluster"] } 
sha2 = "0.10.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
http = "0.2.6"
cbor_event = "2.1.3"
octavo-digest = "0.1.2"
bech32 = "0.4.0"
futures = "0.3.21"
argon2 = "0.4.0"
itertools = "0.10.3"

cryptoxide = { git = "https://github.com/typed-io/cryptoxide.git", branch="master", features = ["blake2"]}