#################################################################################
# See LICENSE.md for full license information.                                  #
# Software: Drasil Blockchain Application Framework                             #
# License: Drasil Source Available License v1.0                                 #
# Licensors: Torben Poguntke (torben@drasil.io) & Zak Bassey (zak@drasil.io)    #
#################################################################################

[package]
name = "odin"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Drasil Core Runner"
repository = "https://github.com/Sbcdn/odin.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]


[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
hex = "0.4.3"
whoami = "1.2.1"
serde_json = {version="1.0", features = ["preserve_order"]}
pretty_env_logger = "0.4.0"
log = "0.4.6" 
atoi = "1.0.0"
structopt = "0.3.26"
diesel = { version = "1.4.8", features = ["postgres","numeric","chrono","64-column-tables","r2d2"] }
dotenv = "0.15.0"

hugin = { path = "../hugin", version="0.1.0" }
#hugin = { git = "ssh://git@github.com/sbcdn/hugin.git", branch="main" }