[package]
name = "pauther"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.2", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = { version = "0.3", features = ["tls"] }
pretty_env_logger = "0.4.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
jsonwebtoken = { version = "8.1.0", features = ["use_pem"] }
hugin = { path = "../hugin", version = "0.1.0" }
futures = { version = "0.3", default-features = false }
