#################################################################################
# See LICENSE.md for full license information.                                  #
# Software: Drasil Blockchain Application Framework                             #
# License: Drasil Source Available License v1.0                                 #
# Licensors: Torben Poguntke (torben@drasil.io) & Zak Bassey (zak@drasil.io)    #
#################################################################################

[package]
name = "sleipnir"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Client Portal Library"
repository = "https://github.com/Sbcdn/sleipnir.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4.0"
log = "0.4"
chrono = "0.4.19"
dotenv = "0.15.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
jsonwebtoken = { version="8.1.0", features=["use_pem"]}
textnonce = "1.0.0"
zeroize = "1.4"
warp = { version="0.3"}
structopt = { version = "0.3.26", optional = true}  #  

murin = { path = "../murin", version="0.1.0" }
mimir = { path = "../mimir", version="0.1.0" }
gungnir = { path = "../gungnir", version="0.1.0" }
hugin = { path = "../hugin", version="0.1.0" }

#gungnir = { git = "ssh://git@github.com/sbcdn/gungnir.git", branch="main" }
#mimir = { git = "ssh://git@github.com/sbcdn/mimir.git", branch="main" }
#murin = { git = "ssh://git@github.com/sbcdn/murin.git", branch="main" }
#hugin = { git = "ssh://git@github.com/sbcdn/hugin.git", branch="main" }

[features]
clib = ["structopt"]

[[bin]]
name = "create_mintpolicy"
required-features = ["clib"]

