######################################################################
# See LICENSE.md for full license information.                       #
# Software: Drasil Blockchain Application Framework                  #
# License: “Commons Clause” License Condition v1.0 & Apache 2.0      #
# Licensor: Torben Poguntke (torben@drasil.io)                       #
######################################################################

[package]
name = "vidar"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Reward Information API"
repository = "https://github.com/Sbcdn/vidar.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
bytes = "1"
pretty_env_logger = "0.4.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
bigdecimal = { version = "0.3.0", features = ["serde"] }
cardano-serialization-lib = "11.0.5"
hex = "0.4"
chrono = { version = "0.4.19", features = ["serde"] }
jsonwebtoken = { version = "8.1.0", features = ["use_pem"] }
thiserror = "1.0.32"

gungnir = { path = "../gungnir", version = "0.1.0" }
hugin = { path = "../hugin", version = "0.1.0" }
#gungnir = { git = "ssh://git@github.com/maestro-org/gungnir.git", branch="main" }
#hugin = { git = "ssh://git@github.com/sbcdn/hugin.git", branch="main" }
