#################################################################################
# See LICENSE.md for full license information.                                  #
# Software: Drasil Blockchain Application Framework                             #
# License: Drasil Source Available License v1.0                                 #
# Licensors: Torben Poguntke (torben@drasil.io) & Zak Bassey (zak@drasil.io)    #
#################################################################################
[package]
name = "freki"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Reward Calculator"
repository = "https://github.com/Sbcdn/freki.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]

rust-s3 = { version = "0.31.0", default-features = false, features = [
    "tokio-rustls-tls",
    "tags",
] }
#indexmap = "=1.7.0"
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.26"
chrono = "0.4.19"
bigdecimal = { version = "0.3.0", features = ["serde"] }
strum = "0.24"
strum_macros = "0.24"
pretty_env_logger = "0.4.0"
log = "0.4"
csv = "1.1.6"


murin = { path = "../../libs/murin", version = "0.1.0" }
mimir = { path = "../../libs/mimir", version = "0.1.0" }
gungnir = { path = "../../libs/gungnir", version = "0.1.0" }
hugin = { path = "../../libs/hugin", version = "0.1.0" }
sleipnir = { path = "../../libs/sleipnir", version = "0.1.0" }
