[package]
authors = ["Torben Poguntke <torben@drasil.io>"]
description = "Drasil Blockchain Application Framework - Reward Calculator"
documentation = "https://docs.drasil.io"
edition = "2021"
homepage = "https://www.drasil.io"
license = "https://github.com/Sbcdn/drasil/blob/main/LICENSE.md"
readme = "https://github.com/Sbcdn/drasil/blob/main/README.md"
name = "freki"
repository = "https://github.com/Sbcdn/freki.git"
version = "0.1.0"

[dependencies]
bigdecimal = { version = "0.4.0", features = ["serde"] }
chrono = "0.4.19"
csv = "1.1.6"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
structopt = "0.3.26"
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1", features = ["full"] }

drasil-gungnir = { path = "../../drasil-gungnir", version = "0.1.0" }
drasil-hugin = { path = "../../drasil-hugin", version = "0.1.0" }
drasil-mimir = { path = "../../drasil-mimir", version = "0.1.0" }
drasil-murin = { path = "../../drasil-murin", version = "0.1.0" }
drasil-sleipnir = { path = "../../drasil-sleipnir", version = "0.1.0" }

[dependencies."rust-s3"]
default-features = false
features = ["tokio-rustls-tls", "tags"]
version = "0.31.0"
