[package]
name = "utxopti"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - UTxO Optimizer"
repository = "https://github.com/Sbcdn/freki.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.26"
chrono = "0.4.19"
bigdecimal = { version = "0.3.0", features = ["serde"] }
strum = "0.24"
strum_macros = "0.24"
pretty_env_logger = "0.4.0"
log = "0.4"
csv = "1.1.6"
thiserror = "1.0.32"
hex = "0.4"

drasil-murin = { path = "../../drasil-murin", version = "0.1.0" }
drasil-mimir = { path = "../../drasil-mimir", version = "0.1.0" }
drasil-gungnir = { path = "../../drasil-gungnir", version = "0.1.0" }
drasil-hugin = { path = "../../drasil-hugin", version = "0.1.0" }
