#################################################################################
# See LICENSE.md for full license information.                                  #
# Software: Drasil Blockchain Application Framework                             #
# License: Drasil Source Available License v1.0                                 #
# Licensors: Torben Poguntke (torben@drasil.io) & Zak Bassey (zak@drasil.io)    #
#################################################################################

[package]
name = "gungnir"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Reward Library"
repository = "https://github.com/Sbcdn/gungnir.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0.0", features = [
    "postgres",
    "numeric",
    "chrono",
    "64-column-tables",
    "r2d2",
] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = [
    "postgres",
] } # "postgres", "mysql" or "sqlite"
bigdecimal = { version = "0.3.0", features = [
    "serde",
] } # needs to be 0.1.2 otherwise not working -> dependency diesel
chrono = { version = "0.4.19", features = ["serde"] }
pretty_env_logger = "0.4.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
hex = "0.4"
rand = "0.8.5"
itertools = "0.10.3"

mimir = { path = "../mimir", version = "0.1.0", optional = true }
#mimir = { git = "ssh://git@github.com/sbcdn/mimir.git", branch="main", optional = true }
structopt = { version = "0.3.26", optional = true }

[features]
mimir_bin = ["mimir", "structopt"]

[[bin]]
name = "create_token_whitelisting"
required-features = ["mimir_bin"]
