[package]
name = "gungnir"
version = "0.1.0"
edition = "2021"
description = "Drasil Blockchain Application Framework - Reward Library"
repository = "https://github.com/Sbcdn/gungnir.git"
homepage = "https://www.drasil.io"
documentation = "https://docs.drasil.io"
license = "LICENSE.md"
readme = "README.md"
authors = ["Torben Poguntke <torben@drasil.io>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
async-recursion = "1.0.0"
diesel = { version = "2.0.0", features = [
    "postgres",
    "numeric",
    "chrono",
    "64-column-tables",
    "r2d2",
    "serde_json",
] }
diesel-derive-enum = { version = "2.0.0", features = ["postgres"] }
diesel-dynamic-schema = "0.2.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
pretty_env_logger = "0.4.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
hex = "0.4"
rand = "0.8.5"
itertools = "0.10.3"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

mimir = { path = "../mimir", version = "0.1.0", optional = true }
structopt = { version = "0.3.26", optional = true }

[features]
mimir_bin = ["mimir", "structopt"]

[[bin]]
name = "create_token_whitelisting"
required-features = ["mimir_bin"]
